--- a/style.css
+++ b/style.css
@@ -1,4 +1,38 @@
-/* /!\ You need to add vendor prefixes in order to render the CSS properly (or simply use http://leaverou.github.io/prefixfree/) /!\ */ #tridiv {
+.centerText {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+.loader
+{
+    position: absolute;
+    text-align: center;
+    width:10%;
+    left: 5%;
+    top:5%;
+}
+
+.instruction {
+    top: 15%;
+}
+
+.Score {
+    bottom: 15%;
+}
+
+.highscore {
+    bottom: 5%;
+}
+
+/*--------anims-----*/
+
+
+
+
+/*--------3D stuff-----*/
+
+#tridiv {
     perspective: 800px;
     position: absolute;
     overflow: hidden;
@@ -9,6 +43,7 @@
   }
   .face {
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
+    transition: 0.25s;
   }
   .scene, .shape, .face, .face-wrapper, .cr {
     position: absolute;
@@ -133,7 +168,7 @@
   }
   .cub-2 .rt
   {
-    background:url(img/off/gabe.jpg);
+    background:url(img/off/bork.jpg);
   }
   /* .cub-3 styles */
   .cub-3 {
@@ -161,7 +196,7 @@
     background-color:#7cd9fc;
   }
   .cub-3 .lt {
-    background:url(img/off/roblox.jpg);
+    background:url(img/off/oof.jpg);
   }
   /* .cub-4 styles */
   .cub-4 {
@@ -194,7 +229,7 @@
   }
   .cub-4 .bm {
     background-color:#66e870;
-    background:url(img/off/bongo.jpg);
+    background:url(img/off/bop.jpg);
   }
   .cub-4 .ft {
     width:6em;
