--- a/style.css
+++ b/style.css
@@ -8,30 +8,58 @@
 {
     position: absolute;
     text-align: center;
-    width:10%;
-    left: 5%;
-    top:5%;
+    width:5%;
+    left: 2.5%;
+    top:2.5%;
 }
 
 .instruction {
     top: 15%;
+    font-size: 40px;
+    width: 100%;
+    -webkit-text-stroke-width: 1.5px;
+}
+
+.shadowLine
+{
+    box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.75);
 }
 
 .Score {
-    bottom: 15%;
+    bottom: 10%;
+    font-size: 50px;
 }
 
 .highscore {
     bottom: 5%;
+    font-size: 20px;
+    -webkit-text-stroke-width: 1px;
 }
 
 /*--------anims-----*/
+.bh
+{
+    animation: bluehit 0.5s;
+}
 
+body
+{
+    background-image: radial-gradient(circle, #ffffff, #f0f0f0, #e1e1e1, #d2d2d2, #c4c4c4);
+}
 
+*
+{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
+.text
+{
+    color:white;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}
 
 /*--------3D stuff-----*/
-
 #tridiv {
     perspective: 800px;
     position: absolute;
@@ -42,7 +70,7 @@
     font-size: 170%;
   }
   .face {
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 1);
     transition: 0.25s;
   }
   .scene, .shape, .face, .face-wrapper, .cr {
@@ -116,13 +144,15 @@
   [class*="cuboid"] .bm {
     top: 100%;
   }
-  /* .cub-1 styles */
-  .cub-1 {
+
+
+/* .cub-1 styles */
+.cub-1 {
     transform:translate3D(0em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
     opacity:1;
-    width:15em;
+    width:14em;
     height:3em;
-    margin:-1.5em 0 0 -7.5em;
+    margin:-1.5em 0 0 -7em;
   }
   .cub-1 .ft {
     transform:translateZ(1.5em);
@@ -135,15 +165,15 @@
     height:3em;
   }
   .cub-1 .tp, .cub-1 .bm {
-    width:15em;
+    width:14em;
     height:3em;
   }
   .cub-1 .face {
-    background-color:#959595;
+    background-color:#d3d3d3;
   }
-  /* .cub-2 styles */
+  /* .cub-2 styles (red)*/
   .cub-2 {
-    transform:translate3D(-9.5em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform:translate3D(-8em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
     opacity:1;
     width:2em;
     height:5em;
@@ -170,9 +200,9 @@
   {
     background:url(img/off/bork.jpg);
   }
-  /* .cub-3 styles */
+  /* .cub-3 styles (blue)*/
   .cub-3 {
-    transform:translate3D(9.5em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform:translate3D(8em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
     opacity:1;
     width:2em;
     height:5em;
@@ -221,7 +251,7 @@
     height:6em;
   }
   .cub-4 .face {
-    background-color:#959595;
+    background-color:#d3d3d3;
   }
   .cub-4 .tp {
     background-color:#ecd34a;
@@ -301,3 +331,17 @@
   .cub-4 .side {
     width:0.025em;
   }
+
+
+/* CSS Mini Reset */
+/* http://www.vcarrer.com/2010/05/css-mini-reset.html */
+
+html, body, div, form, fieldset, legend, label
+{
+ margin: 0;
+ padding: 0; 
+}
+
+h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }
+
+img { border: 0; }
